@@ -310,6 +310,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA i905D  (EXPERIMENTAL)
        Canon PIXMA i950   (EXPERIMENTAL)
        Canon PIXMA i960   (EXPERIMENTAL)
+       Canon PIXMA i965   (EXPERIMENTAL)
        Canon PIXMA i6100  (EXPERIMENTAL)
        Canon PIXMA i6500  (EXPERIMENTAL)
        Canon PIXMA i9100  (EXPERIMENTAL)
